# rcp_lxd

./: .gitignore  MIGRATION.md  README.md  ansible.cfg  clean.py  cloud-init  install.sh  pyproject.toml  run-6-17.sh  run-all-12-28-2025.sh  run-quick-test.sh  run_tests.sh  test_package.py
deprecated/: README.md  add-user-to-lxd-vm.yml  clean.sh  config.yaml  create.md  create.py  create.sh  from_gemini.yml  inventory.yml  lxd.yml  lxd_groups.yml  my-vm_inventory.ini  run_ansible.py  test_vm1.yml  vars
deprecated/inventory/: all.ini  localhost.ini  localhost_venv_python.ini  single_host.ini
rcplxd/: __init__.py  ansible_utils.py  cli.py  container.py  core.py  tui.py
scripts/: install.sh  ip.sh  run_all_gui.sh  run_nano.sh  run_quick.sh  run_tests.sh
tests/: conftest.py  test_ansible_utils.py  test_container.py  test_core.py  test_package.py
