[project]
name = "rcp-lxd"
version = "0.1.0"
description = "LXD container/VM management utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
]

[project.scripts]
rcp_lxd = "rcplxd.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rcplxd"]

[tool.uv]
dev-dependencies = []
